--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    font-family: "Roboto", "Arial", sans-serif;
 }
 
 a{
@@ -48,7 +49,7 @@ a{
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
     font-size: 1rem;
-    font-family: "Roboto", "Arial", sans-serif;
+    
     font-weight: 400;
     outline: none;
 }
@@ -100,13 +101,13 @@ a{
     border-radius: 22px;
     padding: 10px;
     font-size: 14px;
-    font-family: "Roboto", "Arial", sans-serif;
+
     cursor: pointer;
     font-weight: 600;
 }
 
 .main{
-    padding: 0 1.5rem;
+    padding: 0 2rem;
 }
 
 .chip-filter{
@@ -124,7 +125,52 @@ a{
     background-color: rgba(242, 242, 242);
     font-size: 1rem;
     font-weight: 600;
-    font-family: "Roboto", "Arial", sans-serif;
+    
 }
+
+.videos{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+}
+
+.video-card {
+    padding: 0;
+    margin: 0;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    text-align: left;
+    background-color: transparent;
+    width: 28rem;
+}
+
+.video-card:hover{
+    background-color: rgba(248, 234, 231);
+    border-radius: 10px;
+    border: none;
+}
+
+.video-card img{
+    width: 100%;
+    height: 18rem;
+    border-radius: 10px;
+    padding-bottom: 12px;
+    
+}
+
+.video-card h3{
+    margin: 0;
+    flex-shrink: 0; 
+}
+
+.video-card p{
+    font-size: 14px;
+    color: gray;
+    margin: 0;
+    padding: 5px 0;
+}
+
+
 
 
